# otv2-pl

./: CMakeLists.txt  readme.md
src/: Bootstrap.cpp  Vendor.hpp
src/loader/: BootstrapTaskController.cpp  BootstrapTaskController.hpp
src/loader/callback/: CallbackManager.hpp
src/loader/runtime/: RuntimeHandler.cpp  RuntimeHandler.hpp
src/loader/segment/: Segment.hpp  SegmentHeader.hpp  SegmentHeaderManager.cpp  SegmentTranslator.hpp  new 4.txt
src/loader/ui/: UIBridge.cpp  UIBridge.hpp  UIRenderer.cpp  UIRenderer.hpp
src/segment/: SegmentInterpreter.hpp
src/segment/framework/: OneEngine.cpp  OneEngine.hpp
src/segment/framework/sdk/game/memory/: VirtualReflectionHandler.cpp  VirtualReflectionHandler.hpp
src/util/: CommonUtil.cpp  CommonUtil.hpp  PanicUtil.cpp  PanicUtil.hpp
src/util/accessors/: ConfigurationAccessor.cpp  ConfigurationAccessor.hpp  LanguageAccessor.cpp  LanguageAccessor.hpp
src/util/stuff/: DiscordRPC.hpp  Singleton.hpp
